Practice question in js

--- a/funtion.html
+++ b/funtion.html
@@ -50,7 +50,7 @@
 // function name(a,b){
 //     return(a+b)
 // }
-// let x= name("GOOD MORNING" ,"Poonam")
+//  let x=name("GOOD MORNING" ,"Poonam")
 // document.write(x)
 
 
@@ -291,13 +291,20 @@
 
 
 
+function add(a,b){
+   return(a+b);
+}
+let y=add(3,4);
+document.write(y);
 
 
 
 
-
-
-
+// function add(a,b){
+//    document.write(a+b)
+//    document.write("<br>")
+// }
+// add(3,4)
 
 
 
