--- a/loopHW.html
+++ b/loopHW.html
@@ -70,13 +70,15 @@
     // }
     // document.write(a)
     // ............................[[QUESTION=10]]----wrong-----------------------//
-    //  let a =3
-    //  let i=1
-    // while( i<=5){
-    //   a=a*i
-    //   i++
-    // }
-    // document.write(a*i,"<br>")
+//      let i=1;
+// let a=3;
+//     while( i<=5){
+//     document.write(a)
+//       a +=3;
+//       i++;
+//     }
+
+
     // ............................[[QUESTION=10]]do-while---------------------------//
     // let i=1;
 
@@ -97,17 +99,7 @@
     // }
     // while(i>=1);
     // ............................[[QUESTION=12]]do-while---------------------------//
-    // let i=2;
-
-    // do{
-    // document.write(i)
-    // i++
-    // }
-    // while(i%2==0){
-
-    // }
-
-    // -----------------------------below true----------------------------
+    
     // let i = 2;
 
     // do {
@@ -292,15 +284,15 @@
 
 
 
-    for (let i = 1; i <= 4; i++) {
-      for (let j = 1; j <= 4-i; j++) {
-        document.write("&nbsp")
-      }
-      for (let k = 1; k <= i; k++) {
-        document.write("*", "&nbsp")
-      }
-      document.write("<br>")
-    }
+    // for (let i = 1; i <= 4; i++) {
+    //   for (let j = 1; j <= 4-i; j++) {
+    //     document.write("&nbsp")
+    //   }
+    //   for (let k = 1; k <= i; k++) {
+    //     document.write("*", "&nbsp")
+    //   }
+    //   document.write("<br>")
+    // }
 
 
 
