--- a/practiceTT.html
+++ b/practiceTT.html
@@ -126,7 +126,7 @@
 
 
 
-        
+
 
 
         // let a="hello";
@@ -149,11 +149,31 @@
         // }
 
 
-
+        // ========================question=10============================//
         // let a=[1,2,3,4];
         // for(let i=0; i<=a.length-1; i++){
         //     for(let j=0; j<a.length; j++ ){
         // if(a[i]+a[j]==4 && i!=j){
+        //     document.write(a[j],"<br>")
+        // }
+        //     }
+        // }
+
+
+
+        // let a=[1,2,3,10,4,9,5];
+        // for(let i=0; i<=a.length-1; i++){
+        //     for(let j=0; j<a.length; j++ ){
+        // if(a[i]+a[j]==15 && i!=j){
+        //     document.write(a[j],"<br>")
+        // }
+        //     }
+        // }
+
+        // let a=[1,2,3,10,4,9,5];
+        // for(let i=0; i<a.length; i++){
+        //     for(let j=0; j<a.length; j++ ){
+        // if(a[i]+a[j]==15 && i!=j){
         //     document.write(a[j],"<br>")
         // }
         //     }
@@ -258,33 +278,49 @@
 
 
 
-// for(let i=1;i<=5;i++){
-//                         for(let j=5;j>i;j--){
-//                                 document.write("&nbsp&nbsp")
-//                         }
-//                         for(let l=1;l<=i;l++){
-//                                 document.write(l,"&nbsp")
-//                         }
-//                         document.write("<br>")
-//                     }
+        // for(let i=1;i<=5;i++){
+        //                         for(let j=5;j>i;j--){
+        //                                 document.write("&nbsp&nbsp")
+        //                         }
+        //                         for(let l=1;l<=i;l++){
+        //                                 document.write(l,"&nbsp")
+        //                         }
+        //                         document.write("<br>")
+        //                     }
 
-//                 for(let i=4;i>=1;i--){
-//                         for(let j=4;j>=i;j--){
-//                                 document.write("&nbsp&nbsp")
-//                         }
-//                         for(let l=1;l<=i;l++){
-//                                 document.write(l,"&nbsp")
-//                         }
-//                         document.write("<br>")
-//                 }
-
-
+        //                 for(let i=4;i>=1;i--){
+        //                         for(let j=4;j>=i;j--){
+        //                                 document.write("&nbsp&nbsp")
+        //                         }
+        //                         for(let l=1;l<=i;l++){
+        //                                 document.write(l,"&nbsp")
+        //                         }
+        //                         document.write("<br>")
+        //                 }
 
 
 
 
 
 
+        for (let i = 1; i <= 5; i++) {
+            for (let j = 5; j > i; j--) {
+                document.write("&nbsp")
+            }
+            for (let k = 1; k <= i; k++) {
+                document.write(k, "&nbsp")
+            }
+            document.write("<br>")
+        }
+for(let i=4; i>=1; i--){
+    for(let j=4; j>=i; j--){
+        document.write("&nbsp")
+    }
+    for(let k=1; k<=i; k++){
+        document.write(k,"&nbsp")
+    }
+    document.write("<br>")
+}
 
 
 
