--- a/string.html
+++ b/string.html
@@ -88,9 +88,9 @@
 // document.write(y)
 // -----------------------spilt------------------------------
 
-let x= "hello pooam"
-let y =x.split(" ");
-document.write(y); 
+// let x= "hello "
+// let y =x.split('');
+// document.write(y); 
 // -------------------CharAt----------------------
 
 // let x= "poonam";
@@ -128,6 +128,7 @@ document.write(y);
 // let x= "hello poonam "
 // let y= x.lastIndexOf("a")
 // document.write(y)
+
 
 
 // -------------------------------------------start with
