--- a/even.html
+++ b/even.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   <script>
-    let number = parseInt(prompt("enter the number"))
-if((number%2)==0){
-document.write("it is even number")
-}
-else{
-    document.write("it is odd number")
-}
+//     let number = parseInt(prompt("enter the number"))
+// if((number%2)==0){
+// document.write("it is even number")
+// }
+// else{
+//     document.write("it is odd number")
+// }
   </script>  
 </body>
 </html>
