--- a/selfJS.html
+++ b/selfJS.html
@@ -47,7 +47,11 @@
 // }
 
 
-
+// for(let i=5; i>=1; i--){
+//     for(let j=1; j<=i; j++){
+//         document.write("*"," ")
+//     }document.write("<br>")
+// }
 
 
 
@@ -66,6 +70,9 @@
 //         document.write(i)
 //         document.write("<br>")
 //     }
+
+
+
 
 
     </script>
