--- a/selffunction.html
+++ b/selffunction.html
@@ -9,9 +9,11 @@
 
 <body>
     <script>
-        // let max=0
+            // let max=0
+       
         // let  x= [2,1,6,7,12,5]
         // for(let i=0; i<x.length; i++){
+          
         // for(let j= i+1; j<x.length; j++){
         // if(x[i]<x[j]){
         //     max= x[i]
@@ -19,7 +21,7 @@
         //     x[j]=max
         // }
         // }
-        // document.write(x[i])
+        // document.write(x[i],"<br>")
         // }
         // ======================descending===========================
 
